--- a/pubs.html
+++ b/pubs.html
@@ -548,6 +548,21 @@ $(document).ready(function () {
 <ul>
 <li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees</em>. arXiv:2108.10130 [cs.DB]. Aug. 2021 [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2021nodba.bib', 'bibtex-perera2021nodba')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2021hard">
+@misc{marchant2021hard,
+  title = {Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
+  note = {arXiv:2109.08266 [cs.LG]},
+  year = {2021},
+  month = {Sep},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. <em>Hard to Forget: Poisoning Attacks on Certified Machine Unlearning</em>. arXiv:2109.08266 [cs.LG]. Sep. 2021 [<a href="https://arxiv.org/abs/2109.08266">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021hard.bib', 'bibtex-marchant2021hard')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2020</h3>
