--- a/pubs.html
+++ b/pubs.html
@@ -330,6 +330,22 @@ $(document).ready(function () {
 <h3>2021</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-yang2020characterizing">
+@inproceedings{yang2020characterizing,
+  title = {Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
+  year = {2021},
+  author = {Zhuolin Yang and Linyi Li and Xiaojun Xu and Shiliang Zuo and Qian Chen and Benjamin Rubinstein and Ce Zhang and Bo Li},
+  booktitle = {Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems},
+  series = {NeurIPS},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Benjamin Rubinstein, Ce Zhang, and Bo Li. “Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness”. In: <em>Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems</em>. NeurIPS. Accepted. 2021 [<a href="http://www.gatsby.ucl.ac.uk/~balaji/udl2020/accepted-papers/UDL2020-paper-071.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2020characterizing.bib', 'bibtex-yang2020characterizing')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2021needle">
 @inproceedings{marchant2021needle,
   title = {Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
@@ -697,20 +713,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Setiawan, Naufal Fikri, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “Function Interpolation for Learned Index Structures”. In: <em>Databases Theory and Applications</em>. ADC. 31st Australasian Database Conference. 2020, pp. 68-80 [<a href="https://link.springer.com/book/10.1007/978-3-030-39469-1">publisher link</a>; <span style="color:red">Best Student Paper Honorable Mention</span>; <a style="cursor: pointer;" onclick="DownloadToFile('setiawan2020function.bib', 'bibtex-setiawan2020function')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-yang2020characterizing">
-@misc{yang2020characterizing,
-  title = {Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
-  year = {2020},
-  author = {Zhuolin Yang and Linyi Li and Xiaojun Xu and Shiliang Zuo and Qian Chen and Benjamin Rubinstein and Ce Zhang and Bo Li},
-  note = {Pre-print presented at ICML'2020 Workshop on Uncertainty \& Robustness in Deep Learning},
-}
-</code></pre></div>
-
-<ul>
-<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Benjamin Rubinstein, Ce Zhang, and Bo Li. <em>Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness</em>. Pre-print presented at ICML’2020 Workshop on Uncertainty &amp; Robustness in Deep Learning. 2020 [<a href="http://www.gatsby.ucl.ac.uk/~balaji/udl2020/accepted-papers/UDL2020-paper-071.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2020characterizing.bib', 'bibtex-yang2020characterizing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
