--- a/pubs.html
+++ b/pubs.html
@@ -346,6 +346,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-edwards2020a">
+@article{edwards2020a,
+  title = {A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author = {Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  journal = {IEEE Transactions on Information Theory},
+  note = {Accepted},
+  year = {2021},
+}
+</code></pre></div>
+
+<ul>
+<li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. “A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy”. In: <em>IEEE Transactions on Information Theory</em> (2021). Accepted. [<a href="https://arxiv.org/abs/2007.05975">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2021needle">
 @inproceedings{marchant2021needle,
   title = {Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
@@ -648,21 +663,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Culnane, Chris, Benjamin I. P. Rubinstein, and David Watts. <em>Not fit for Purpose: A critical analysis of the ‘Five Safes’</em>. arXiv:2011.02142 [cs.CR]. Nov. 2020 [<a href="https://arxiv.org/abs/2011.02142">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('culnane2020a.bib', 'bibtex-culnane2020a')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-edwards2020a">
-@misc{edwards2020a,
-  title = {A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
-  author = {Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
-  note = {arXiv:2007.05975 [cs.IT]},
-  year = {2020},
-  month = {Jul},
-}
-</code></pre></div>
-
-<ul>
-<li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. <em>A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy</em>. arXiv:2007.05975 [cs.IT]. Jul. 2020 [<a href="https://arxiv.org/abs/2007.05975">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
