--- a/pubs.html
+++ b/pubs.html
@@ -485,7 +485,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons”. In: <em>2021 IEEE 60th Conference on Decision and Control</em>. CDC. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('Sun2021A.bib', 'bibtex-Sun2021A')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons”. In: <em>2021 IEEE 60th Conference on Decision and Control</em>. CDC. Accepted. 2021 [<a href="http://arxiv.org/abs/2109.14208">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021A.bib', 'bibtex-Sun2021A')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
