ieee toit publisher link

--- a/pubs.html
+++ b/pubs.html
@@ -357,7 +357,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. “A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy”. In: <em>IEEE Transactions on Information Theory</em> (2021). Accepted. [<a href="https://arxiv.org/abs/2007.05975">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
+<li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. “A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy”. In: <em>IEEE Transactions on Information Theory</em> (2021). Accepted. [<a href="https://arxiv.org/abs/2007.05975">full</a>; <a href="https://ieeexplore.ieee.org/document/9576501">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
