aaai code; software links to code

--- a/pubs.html
+++ b/pubs.html
@@ -373,7 +373,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance”. In: <em>Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining</em>. KDD. 2021, pp. 1180-1190 [<a href="https://arxiv.org/abs/2006.06963">full</a>; <a href="https://dl.acm.org/doi/10.1145/3447548.3467435">publisher link</a>; <a href="https://github.com/ngmarchant/activeeval">software</a>; <a href="https://dl.acm.org/doi/10.1145/3447548.3467435#video_stream_uuid%3Aeff6337b-7642-4147-a135-8d0dac98bbce">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021needle.bib', 'bibtex-marchant2021needle')">BibTeX</a>]</li>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance”. In: <em>Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining</em>. KDD. 2021, pp. 1180-1190 [<a href="https://arxiv.org/abs/2006.06963">full</a>; <a href="https://dl.acm.org/doi/10.1145/3447548.3467435">publisher link</a>; <a href="https://github.com/ngmarchant/activeeval">code</a>; <a href="https://dl.acm.org/doi/10.1145/3447548.3467435#video_stream_uuid%3Aeff6337b-7642-4147-a135-8d0dac98bbce">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021needle.bib', 'bibtex-marchant2021needle')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -422,7 +422,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> 30.2 (2021), pp. 406-421 [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> 30.2 (2021), pp. 406-421 [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">code</a>; <a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -454,7 +454,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. 2021, pp. 11682-11690 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a href="https://ojs.aaai.org/index.php/AAAI/article/view/17389">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
+<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. 2021, pp. 11682-11690 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a href="https://ojs.aaai.org/index.php/AAAI/article/view/17389">publisher link</a>; <a href="https://github.com/zhangrh93/InvertibleCE">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -500,7 +500,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Putting words into the system’s mouth: A targeted attack on neural machine translation using monolingual data poisoning”. In: <em>Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021</em>. 2021, pp. 1463-1473 [<a href="https://arxiv.org/abs/2107.05243">full</a>; <a href="https://github.com/JunW15/Monolingual-Attack">software</a>; <a href="https://aclanthology.org/2021.findings-acl.127">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021putting.bib', 'bibtex-wang2021putting')">BibTeX</a>]</li>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Putting words into the system’s mouth: A targeted attack on neural machine translation using monolingual data poisoning”. In: <em>Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021</em>. 2021, pp. 1463-1473 [<a href="https://arxiv.org/abs/2107.05243">full</a>; <a href="https://github.com/JunW15/Monolingual-Attack">code</a>; <a href="https://aclanthology.org/2021.findings-acl.127">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021putting.bib', 'bibtex-wang2021putting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -515,7 +515,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021</em>. 2021, pp. 4711-4717 [<a href="https://arxiv.org/abs/2107.08357">full</a>; <a href="https://github.com/JunW15/NumberTest">software</a>; <a href="https://aclanthology.org/2021.findings-acl.415">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021</em>. 2021, pp. 4711-4717 [<a href="https://arxiv.org/abs/2107.08357">full</a>; <a href="https://github.com/JunW15/NumberTest">code</a>; <a href="https://aclanthology.org/2021.findings-acl.415">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -531,7 +531,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track</em>. ECML-PKDD. 2021, pp. 69-84 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">software</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-86514-6_5">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track</em>. ECML-PKDD. 2021, pp. 69-84 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">code</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-86514-6_5">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -547,7 +547,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a href="https://github.com/MelbourneFuzzingHub/aflteam?s=09">software</a>; <a href="https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
+<li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a href="https://github.com/MelbourneFuzzingHub/aflteam?s=09">code</a>; <a href="https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -678,7 +678,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>2020 35th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. 2020, pp. 54-65 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://arxiv.org/abs/2002.06311">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legionb.bib', 'bibtex-liu2020legionb')">BibTeX</a>]</li>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>2020 35th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. 2020, pp. 54-65 [<a href="https://github.com/Alan32Liu/Legion">code</a>; <a href="https://arxiv.org/abs/2002.06311">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legionb.bib', 'bibtex-liu2020legionb')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -695,7 +695,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>Proceedings of the 23rd International Conference on Fundamental Approaches to Software Engineering</em>. FASE. Test-Comp session. 2020, pp. 545-549 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legion.bib', 'bibtex-liu2020legion')">BibTeX</a>]</li>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>Proceedings of the 23rd International Conference on Fundamental Approaches to Software Engineering</em>. FASE. Test-Comp session. 2020, pp. 545-549 [<a href="https://github.com/Alan32Liu/Legion">code</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legion.bib', 'bibtex-liu2020legion')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -793,7 +793,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Li, Yuan, Benjamin I. P. Rubinstein, and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. PMLR, 2019, pp. 3886-3895 [<a href="http://proceedings.mlr.press/v97/li19i.html">PDF</a>; <a href="https://github.com/yuan-li/truth-inference-at-scale">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
+<li>Li, Yuan, Benjamin I. P. Rubinstein, and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. PMLR, 2019, pp. 3886-3895 [<a href="http://proceedings.mlr.press/v97/li19i.html">PDF</a>; <a href="https://github.com/yuan-li/truth-inference-at-scale">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1054,7 +1054,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “In Search of an Entity Resolution OASIS: Optimal Asymptotic Sequential Importance Sampling”. In: <em>Proceedings of the VLDB Endowment</em> 10.11 (Feb. 2017), pp. 1322-1333 [<a href="http://www.vldb.org/pvldb/vol10/p1322-rubinstein.pdf">PDF</a>; <a href="https://arxiv.org/abs/1703.00617">full</a>; <a href="http://git.io/OASIS">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2017in.bib', 'bibtex-marchant2017in')">BibTeX</a>]</li>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “In Search of an Entity Resolution OASIS: Optimal Asymptotic Sequential Importance Sampling”. In: <em>Proceedings of the VLDB Endowment</em> 10.11 (Feb. 2017), pp. 1322-1333 [<a href="http://www.vldb.org/pvldb/vol10/p1322-rubinstein.pdf">PDF</a>; <a href="https://arxiv.org/abs/1703.00617">full</a>; <a href="http://git.io/OASIS">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2017in.bib', 'bibtex-marchant2017in')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1072,7 +1072,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P. and Francesco Alda. “Pain-Free Random Differential Privacy with Sensitivity Sampling”. In: <em>Proceedings of the 34th International Conference on Machine Learning</em>. ICML. PMLR. May. 2017, pp. 2950-2959 [<a href="http://proceedings.mlr.press/v70/rubinstein17a/rubinstein17a.pdf">PDF</a>; <a href="https://arxiv.org/abs/1706.02562">full</a>; <a href="https://brubinstein.github.io/diffpriv">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2017painfree.bib', 'bibtex-rubinstein2017painfree')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P. and Francesco Alda. “Pain-Free Random Differential Privacy with Sensitivity Sampling”. In: <em>Proceedings of the 34th International Conference on Machine Learning</em>. ICML. PMLR. May. 2017, pp. 2950-2959 [<a href="http://proceedings.mlr.press/v70/rubinstein17a/rubinstein17a.pdf">PDF</a>; <a href="https://arxiv.org/abs/1706.02562">full</a>; <a href="https://brubinstein.github.io/diffpriv">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2017painfree.bib', 'bibtex-rubinstein2017painfree')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1089,7 +1089,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Alda, Francesco and Benjamin I. P. Rubinstein. “The Bernstein mechanism: Function release under differential privacy”. In: <em>Proceedings of the 31st AAAI Conference on Artificial Intelligence</em>. AAAI. Feb. 2017, pp. 1705-1711 [<a href="http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf">PDF</a>; <a href="https://arxiv.org/abs/1507.04499">full</a>; <a href="https://brubinstein.github.io/diffpriv">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alda2017the.bib', 'bibtex-alda2017the')">BibTeX</a>]</li>
+<li>Alda, Francesco and Benjamin I. P. Rubinstein. “The Bernstein mechanism: Function release under differential privacy”. In: <em>Proceedings of the 31st AAAI Conference on Artificial Intelligence</em>. AAAI. Feb. 2017, pp. 1705-1711 [<a href="http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf">PDF</a>; <a href="https://arxiv.org/abs/1507.04499">full</a>; <a href="https://brubinstein.github.io/diffpriv">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alda2017the.bib', 'bibtex-alda2017the')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1386,7 +1386,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang, and Sandra Milligan. <em>TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv: 1607.08720 [cs.LG]. [<a href="https://arxiv.org/pdf/1607.08720">PDF</a>; <a href="https://bitbucket.org/jiazhenhe/topicresponse">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
+<li>He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang, and Sandra Milligan. <em>TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv: 1607.08720 [cs.LG]. [<a href="https://arxiv.org/pdf/1607.08720">PDF</a>; <a href="https://bitbucket.org/jiazhenhe/topicresponse">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-6" class="section level3">
