--- a/pubs.html
+++ b/pubs.html
@@ -556,13 +556,13 @@ $(document).ready(function () {
   title = {Mitigating Data Poisoning in Text Classification with Differential Privacy},
   author = {Chang Xu and Jun Wang and Francisco Guzm{\a'a}n and Benjamin I. P. Rubinstein and Trevor Cohn},
   year = {2021},
-  booktitle = {Findings of EMNLP},
-  note = {Accepted},
+  booktitle = {Findings of the Association for Computational Linguistics: EMNLP 2021},
+  pages = {4348--4356},
 }
 </code></pre></div>
 
 <ul>
-<li>Xu, Chang, Jun Wang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “Mitigating Data Poisoning in Text Classification with Differential Privacy”. In: <em>Findings of EMNLP</em>. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('xu2021mitigating.bib', 'bibtex-xu2021mitigating')">BibTeX</a>]</li>
+<li>Xu, Chang, Jun Wang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “Mitigating Data Poisoning in Text Classification with Differential Privacy”. In: <em>Findings of the Association for Computational Linguistics: EMNLP 2021</em>. 2021, pp. 4348-4356 [<a href="https://aclanthology.org/2021.findings-emnlp.369">publisher link</a>; <a href="https://aclanthology.org/2021.findings-emnlp.369.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021mitigating.bib', 'bibtex-xu2021mitigating')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
