--- a/pubs.html
+++ b/pubs.html
@@ -566,6 +566,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-wang2021machine">
+@article{wang2021machine,
+  title = {Machine Learning in Network Anomaly Detection: A Survey},
+  author = {Song Wang and Juan Balarezo and Sithamparanathan Kandeepan and Akram Al-Hourani and Karina Gomez and Ben Rubinstein},
+  year = {2021},
+  journal = {IEEE Access},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Wang, Song, Juan Balarezo, Sithamparanathan Kandeepan, Akram Al-Hourani, Karina Gomez, and Ben Rubinstein. “Machine Learning in Network Anomaly Detection: A Survey”. In: <em>IEEE Access</em> (2021). Accepted. [<a href="https://ieeexplore.ieee.org/document/9610045">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021machine.bib', 'bibtex-wang2021machine')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-perera2021nodba">
 @misc{perera2021nodba,
   title = {No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
