--- a/pubs.html
+++ b/pubs.html
@@ -327,6 +327,25 @@ $(document).ready(function () {
 <p><br></p>
 <p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints. My responses to government consultations are <a href="impact.html#policy_submissions">here</a>.</p>
 <div id="section" class="section level3">
+<h3>2022</h3>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2022hard">
+@inproceedings{marchant2022hard,
+  title = {Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
+  year = {2022},
+  booktitle = {Proceedings of the 36th AAAI Conference on Artificial Intelligence},
+  series = {AAAI},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. “Hard to Forget: Poisoning Attacks on Certified Machine Unlearning”. In: <em>Proceedings of the 36th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2022 [<a href="https://arxiv.org/abs/2109.08266">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2022hard.bib', 'bibtex-marchant2022hard')">BibTeX</a>]</li>
+</ul>
+</div>
+<div id="section-1" class="section level3">
 <h3>2021</h3>
 
 <div class="bibox" style="display: none;">
@@ -342,7 +361,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Benjamin Rubinstein, Ce Zhang, and Bo Li. “Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness”. In: <em>Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems</em>. NeurIPS. Accepted. 2021 [<a href="https://arxiv.org/abs/2104.00671">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2021characterizing.bib', 'bibtex-yang2021characterizing')">BibTeX</a>]</li>
+<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Benjamin Rubinstein, Ce Zhang, and Bo Li. “Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness”. In: <em>Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems</em>. NeurIPS. Accepted. 2021 [<a href="https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html">publisher link</a>; <a href="https://arxiv.org/abs/2104.00671">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2021characterizing.bib', 'bibtex-yang2021characterizing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -572,12 +591,13 @@ $(document).ready(function () {
   author = {Song Wang and Juan Balarezo and Sithamparanathan Kandeepan and Akram Al-Hourani and Karina Gomez and Ben Rubinstein},
   year = {2021},
   journal = {IEEE Access},
-  note = {Accepted},
+  pages = {152379--152396},
+  volume = {9},
 }
 </code></pre></div>
 
 <ul>
-<li>Wang, Song, Juan Balarezo, Sithamparanathan Kandeepan, Akram Al-Hourani, Karina Gomez, and Ben Rubinstein. “Machine Learning in Network Anomaly Detection: A Survey”. In: <em>IEEE Access</em> (2021). Accepted. [<a href="https://ieeexplore.ieee.org/document/9610045">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021machine.bib', 'bibtex-wang2021machine')">BibTeX</a>]</li>
+<li>Wang, Song, Juan Balarezo, Sithamparanathan Kandeepan, Akram Al-Hourani, Karina Gomez, and Ben Rubinstein. “Machine Learning in Network Anomaly Detection: A Survey”. In: <em>IEEE Access</em> 9 (2021), pp. 152379-152396 [<a href="https://ieeexplore.ieee.org/document/9610045">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021machine.bib', 'bibtex-wang2021machine')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -594,23 +614,8 @@ $(document).ready(function () {
 <ul>
 <li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees</em>. arXiv:2108.10130 [cs.DB]. Aug. 2021 [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2021nodba.bib', 'bibtex-perera2021nodba')">BibTeX</a>]</li>
 </ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-marchant2021hard">
-@misc{marchant2021hard,
-  title = {Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
-  author = {Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
-  note = {arXiv:2109.08266 [cs.LG]},
-  year = {2021},
-  month = {Sep},
-}
-</code></pre></div>
-
-<ul>
-<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. <em>Hard to Forget: Poisoning Attacks on Certified Machine Unlearning</em>. arXiv:2109.08266 [cs.LG]. Sep. 2021 [<a href="https://arxiv.org/abs/2109.08266">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021hard.bib', 'bibtex-marchant2021hard')">BibTeX</a>]</li>
-</ul>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2020</h3>
 
 <div class="bibox" style="display: none;">
@@ -791,7 +796,7 @@ $(document).ready(function () {
 <li>Gelbhart, Roei and Benjamin I. P. Rubinstein. <em>Discrete Few-Shot Learning for Pan Privacy</em>. arXiv:2006.13120 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.13120">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('gelbhart2020discrete.bib', 'bibtex-gelbhart2020discrete')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2019</h3>
 
 <div class="bibox" style="display: none;">
@@ -924,7 +929,7 @@ $(document).ready(function () {
 <li>Oetomo, Bastian, Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. <em>A Note on Bounding Regret of the C<span class="math inline">\(^2\)</span>UCB Contextual Combinatorial Bandit</em>. Feb. 2019. arXiv: 1902.07500 [cs.LG]. [<a href="https://arxiv.org/pdf/1902.07500">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo2019a.bib', 'bibtex-oetomo2019a')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2018</h3>
 
 <div class="bibox" style="display: none;">
@@ -1050,7 +1055,7 @@ $(document).ready(function () {
 <li>Han, Yi and Benjamin I. P. Rubinstein. “Adequacy of the Gradient-Descent Method for Classifier Evasion Attacks”. In: <em>AAAI-18 Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan. 2018, pp. 237-244 [<a href="https://arxiv.org/pdf/1704.01704">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2017</h3>
 
 <div class="bibox" style="display: none;">
@@ -1242,7 +1247,7 @@ $(document).ready(function () {
 <li>Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper, and Benjamin I. P. Rubinstein. “Exploring misconceptions as a trigger for enhancing student learning”. In: <em>Higher Education Research and Development Society of Australasia</em>. HERDSA. Apr. 2017, pp. 392-401 [<a href="http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf">PDF</a>; <a href="http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2016</h3>
 
 <div class="bibox" style="display: none;">
@@ -1404,7 +1409,7 @@ $(document).ready(function () {
 <li>He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang, and Sandra Milligan. <em>TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv: 1607.08720 [cs.LG]. [<a href="https://arxiv.org/pdf/1607.08720">PDF</a>; <a href="https://bitbucket.org/jiazhenhe/topicresponse">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2015</h3>
 
 <div class="bibox" style="display: none;">
@@ -1495,7 +1500,7 @@ $(document).ready(function () {
 <li>Fanaeepour, Maryam, Lars Kulik, Egemen Tanin, and Benjamin I. P. Rubinstein. “The CASE histogram: Privacy-aware processing of trajectory data using aggregates”. In: <em>GeoInformatica</em> 19.4 (Jul. 2015), pp. 747-798 [<a href="http://link.springer.com/article/10.1007/s10707-015-0228-8">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2015the.bib', 'bibtex-fanaeepour2015the')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2014</h3>
 
 <div class="bibox" style="display: none;">
@@ -1551,7 +1556,7 @@ $(document).ready(function () {
 <li>Dimitrakakis, Christos, Aikaterini Mitrokotsa, and Benjamin I. P. Rubinstein. “Proceedings of the 7th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2014 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, 2014, pp. 1-124 [<a href="https://dl.acm.org/citation.cfm?id=2666652&amp;picked=prox">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('dimitrakakis2014proceedings.bib', 'bibtex-dimitrakakis2014proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2012</h3>
 
 <div class="bibox" style="display: none;">
@@ -1702,7 +1707,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Blaine Nelson, and Benjamin I. P. Rubinstein. “Fifth ACM Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2012 ACM Conference on Computer and Communications Security</em>. CCS. ACM. Oct. 2012, pp. 1-110 [<a href="http://dx.doi.org/10.1145/2382196.2382327">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2012fifth.bib', 'bibtex-cardenas2012fifth')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2011</h3>
 
 <div class="bibox" style="display: none;">
@@ -1792,7 +1797,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Rachel Greenstadt, and Benjamin I. P. Rubinstein. “Proceedings of the 4th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2011 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, Oct. 2011, pp. 1-116 [<a href="http://dl.acm.org/citation.cfm?id=2046684&amp;coll=DL&amp;dl=GUIDE&amp;CFID=49909398&amp;CFTOKEN=70172951">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2011proceedings.bib', 'bibtex-cardenas2011proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2010</h3>
 
 <div class="bibox" style="display: none;">
@@ -1859,7 +1864,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Secure Learning and Learning for Security: Research in the Intersection”. PhD dissertation. Department of Electrical Engineering &amp; Computer Sciences, University of California, Berkeley, May. 2010 [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2010secure.bib', 'bibtex-rubinstein2010secure')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2009</h3>
 
 <div class="bibox" style="display: none;">
@@ -1962,7 +1967,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Shifting in the n-Cube: Online Mistake Bounds and the Sample Compression Conjecture”. MCompSci thesis. Faculty of Engineering, University of Melbourne, 2009 [<a href="http://repository.unimelb.edu.au/10187/5774">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009bshifting.bib', 'bibtex-rubinstein2009bshifting')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-12" class="section level3">
+<div id="section-13" class="section level3">
 <h3>2008</h3>
 
 <div class="bibox" style="display: none;">
@@ -2046,7 +2051,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft, and Doug Tygar. <em>Compromising PCA-based anomaly detectors for network-wide traffic</em>. technical report UCB/EECS-2008-73. EECS Department, University of California, Berkeley, 2008 [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008compromising.bib', 'bibtex-rubinstein2008compromising')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-13" class="section level3">
+<div id="section-14" class="section level3">
 <h3>2007</h3>
 
 <div class="bibox" style="display: none;">
